# LAR-CODE

autopilot_pkg/: CMakeLists.txt  package.xml  setup.py
autopilot_pkg/autopilot_pkg/: guidance_node.py  lar_common.py  live_node.py  mission_control_node.py  parameters.json  parameters_node.py  qgc_comm_node.py
gps_pkg/: package.xml  setup.cfg  setup.py
gps_pkg/gps_pkg/: gps_node.py  tester.py
hc_comm_utils/: setup.cfg
i2c_devices_pkg/: package.xml  setup.cfg  setup.py
i2c_devices_pkg/i2c_devices_pkg/: i2c_devices_publisher_node.py  i2c_meas_node.py
kayak_bringup/: CMakeLists.txt  package.xml
kayak_bringup/launch/: kayak_app.launch.py
lar_interfaces/: CMakeLists.txt  package.xml
lar_interfaces/msg/: AttVn200.msg  GnssVn200.msg  InsVn200.msg  Joystick.msg  KayakMode.msg  TwinMotorCmd.msg
logger_pkg/: package.xml  setup.cfg  setup.py
logger_pkg/logger_pkg/: logger_node.py
motors_pkg/: CMakeLists.txt  package.xml  setup.cfg  setup.py
motors_pkg/motors_pkg/: Enums.py  actuator_control_node.py  motors_node.py  torqeedo_motor_data_handler.py
sonar_pkg/: package.xml  setup.cfg  setup.py
sonar_pkg/sonar_pkg/: sonar_node.py
