<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>i2c_devices_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gridish@post.bgu.ac.il">lar</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>bme280</depend>
  <depend>smbus2</depend>
  <depend>sensor_msgs</depend>
  <depend>lar_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
