<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kayak_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gridish@post.bgu.ac.il">lar</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>autopilot_pkg</exec_depend>
  <exec_depend>i2c_devices_pkg</exec_depend>
  <exec_depend>gps_pkg</exec_depend>
  <exec_depend>motors_pkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
